<resources>
    <string name="app_name">The Acharyamukti</string>
    <string name="text_luncher_name">The Acharya mukti</string>
    <string name="text_name1">Welcome to theacharyamukti</string>
    <string name="text_name2">First Chat with Astrologer is FREE!</string>
    <string name="text_name3">+91</string>
    <string name="text_button">Send otp</string>
    <string name="text_name4">By proceeding, I agree to Term and conditions &amp;Privacy Policy</string>
    <string name="text_name5">Or condition with</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="text_or">or</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="button_view_all">View all</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The Acharyamukti</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">About us</string>
    <string name="menu_trans">Wallet Transactions</string>
    <string name="menu_slideshow">Call history</string>
    <string name="menu_Help">Help and Support</string>
    <string name="menu_share">Share with Friends and Family</string>
    <string name="menu_ask">what can I ask</string>
    <string name="menu_privacy">Privacy policy</string>
    <string name="menu_login">Logout</string>
    <string name="menu_reports">Report an issue</string>
    <string name="text_love">Love &amp;\nRelationships</string>
    <string name="text_horoscope">Horoscope\nDaily Life</string>
    <string name="text_marriage">Marriage &amp;\nKundali</string>
    <string name="text_career">Career &amp;\nGrowth</string>
    <string name="text_money">Money &amp;\n\Investments</string>
    <string name="text_business">Business</string>
    <string name="text_life">Everyday Life</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_who_are_you">Who are you?</string>
    <string name="text_acharyamukti_long_text">Astrology is as old as is time, when a man on earth realized that events in his life are not happening the way they should or happening randomly, and following some particular pattern or cycle. Astrological predictions could be as basic as addressing personality traits, based out on the date of birth and sun sign to the most complex ones like predicting the destiny with aid from details like place, time, and date of birth. We all are interested in knowing what our future holds for us. There is hardly anyone who ignores the newspaper column every morning that forecasts the horoscope for the day. Many have such strong beliefs in astrology that they start their day, based on what the stars foretell for them. Looking at the present scenario and when technology has occupied every single aspect of our lives, astrology predictions have also become easy with online astrology consultation. Consulting an astrologer in the comfort of our surroundings and as per convenience is all the easier now.</string>
    <string name="text_why_do">Why do we do it?</string>
    <string name="text_vision_mission">Our 2022 vision and mission</string>
    <string name="text_about_longtext">Astrology is as old as is time, when a man on earth realized that events in his life are not happening the way they should or happening randomly, and following some particular pattern or cycle.</string>
    <string name="text_vision">What is our Vision?</string>
    <string name="text_mission">What is our Mission?</string>
    <string name="text_vision_long">Our vision is to see our work spreading worldwide. We want to help people and give them the best track for living their life smoothly. We also see ourselves growing and give people the best of all.
</string>
    <string name="text_mission_long">Our mission is to reach more than 2 million customers worldwide. We are also aiming towards getting connected with 50 countries in the world so that we can spread our work and reach more people for their support and help. We are also working towards getting connected with more than 5 thousands of top Astrologers by the year of 2025.
</string>
    <string name="text_customer_trust_us">What do customers think about us?</string>
    <string name="text_customer_trust_us_long">All this time since 2018, we have received a lot of respect and response from people. They still consult us and get advice from the best Astrologers.
More than lakhs of people follow us and seek our advice online. We want to connect with more people from the entire world.
A lot of people call us to seek advice from us. The best Astrologers give them the best solutions for life. Therefore, people who contact us tend to have respect for us and love talking to us about their ongoing problems.
People like talking to us and they call us again and again for best advice. They never want to get disconnected with us. They love us the way we love them.
</string>
    <string name="text_phone">Phone</string>
    <string name="text_number">+91 7330004646</string>
    <string name="text_our">OUR</string>
    <string name="title_activity_astrologer_profile">Astrologer Profile</string>
    <string name="text_reg_fname">First Name</string>
    <string name="text_reg_lname">Last Name</string>
    <string name="text_reg_Email">Email</string>
    <string name="text_reg_pass">Password</string>
    <string name="text_reg_mobile">Mobile</string>
    <string name="text_reg_address">Address</string>
    <string name="text_calling">On processing</string>
    <string name="text_wait">Please wait.....call will be come on this number</string>
    <string name="text_come_on">After completed the call Please Click on GO Back Button</string>
</resources>