<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_horoscope"
            android:title="Horoscope" />
        <item android:title="@string/menu_share" />
        <item android:title="@string/menu_ask" />
        <item android:title="@string/menu_privacy" />
        <item android:title="@string/menu_login" />
        <item android:title="@string/menu_reports" />
    </group>
</menu>