<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".activity.ProfileUpdate">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input1"
        style="@style/HintText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/HintText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_reg_fname"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input2"
        style="@style/HintText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input1"
        android:layout_marginTop="16sp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_reg_lname"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input3"
        style="@style/HintText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input2"
        android:layout_marginTop="16sp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_reg_mobile"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input4"
        style="@style/HintText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input3"
        android:layout_marginTop="16sp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_reg_Email"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input5"
        style="@style/HintText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input4"
        android:layout_marginTop="16sp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_reg_address" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/yellow"
        android:text="Update" />
</RelativeLayout>