<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/green_conner_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/onProcess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/text_calling"
            android:textAllCaps="true"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/please_wait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/onProcess"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:lines="1"
            android:text="@string/text_wait"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/calling_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/please_wait"
            android:gravity="center_horizontal"
            android:text="@string/text_reg_mobile"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/come_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calling_number"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/text_come_on"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/goBack"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@+id/come_on"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:background="@color/green"
            android:text="Go back"
            android:textColor="@color/white"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>