<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragment.EmailLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/text_name2"
            android:textColor="@color/grey1"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/text_bg"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textColor="@color/grey1"
            android:textColorHint="@color/grey1"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/text_bg"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="@color/grey1"
            android:textColorHint="@color/grey1"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/text_bg"
            android:text="@string/action_sign_in"
            android:textColor="@color/grey1"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/forgotPass"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/forgot_pass"
            android:textColor="@color/grey1"
            android:textStyle="bold"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@color/yellow" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_or"
                android:textColor="@color/grey1"
                android:textSize="12sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@color/yellow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/text_bg"
                android:drawablePadding="6dp"
                android:text="Sign up"
                android:textAllCaps="true"
                android:textColor="#000"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>